# fastrace-axum

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: client.rs  server.rs
src/: lib.rs
